# flix

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .jvmopts  .mill-jvm-opts  .travis.yml  AUTHORS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  DatalogPlusPlus.docx  FOLLOW_UP_PR.md  MutData.py  PointsTo.docx  README.md  Requested features.txt  TODO.md  build.gradle  build.gradle.kts  build.mill  build.sbt  build.xml  circle.yml  f.flix  flix.toml  foo.flix  foo2.flix  gradle.properties  gradlew  gradlew.bat  local.properties.example  mill  mill.bat  settings.gradle.kts  stream.flix  stream2.flix
.claude/: CLAUDE.md
doc/: BUILD.md  Bibliography.md  CHANGELOG.md  COMPILER.md  CONTRIBUTING.md  Dependencies.md  Design.md  DesignChoices.md  DesignPrinciples.md  FAQ.md  Features.md  Grammar.md  Libraries.md  Literature.md  PROJECTS.md  Semantics.md  Semantics.tex
docs/: BUILD.md  CHANGELOG.md  CHECKCAST-INVARIANT.md  COMPILER.md  CONTRIBUTING.md  DIDYOUKNOW.md  PROJECTS.md  PULLREQUEST.md  STYLE.md  WISHLIST.md
dpp/: README.txt  isomorphisms.txt
examples/: Bank.flix  Cards.flix  Company.flix  ConstantPropagation.flix  FamilyTree.flix  IDE.flix  IFDS.flix  Parity.flix  RandomGraph1000.flix  University.flix  algebraic-data-types-and-pattern-matching.flix  an-interpreter-for-a-trivial-expression-language.flix  compiler-puzzle.flix  copying-characters-into-array-with-foreach.flix  deriving-traits.flix  (+65 more)
examples/native-backend/wasm-effects-smoke/host/wasm-rust/: Cargo.toml
examples/native-backend/wasm-effects-smoke/host/wasm-rust/src/: main.rs
(+3927 files in other folders)
